--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ body {
 }
 .social-container {
     min-width: 25em;
+    min-height: 40em;
     padding: 2.75rem;
     background: var(--Grey-800);
     border-radius: 0.8rem;
@@ -106,7 +107,7 @@ body {
 .social-links {
     margin-top: 1.5rem;
 }
-.social-links * + * {
+.social-links * {
     margin-top: .90rem;
 }
 
