--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
   --ff: 'Inter', sans-serif;
   --fs-paragraph: 0.875rem;
-  --fs-heading: 1.375rem;
+  --fs-heading: 1.5rem;
   --fw-400: 400;
   --fw-600: 600;
   --fw-700: 700;
@@ -64,12 +64,13 @@ body {
 .user-name {
     font-size: var(--fs-heading);
     font-weight: var(--fw-600);
-    margin-bottom: 0.75rem;
+    margin-block: 0;
+    margin-bottom: 0.5rem;
 }
 
 .user-location {
     color: var(--Green);
-    font-weight: var(--fw-600);
+    font-weight: var(--fw-700);
     margin: 0.5rem 0 1rem;
     
 }
@@ -97,9 +98,11 @@ body {
     min-height: 100dvh;
 }
 .social-container {
+    max-height: 38.188rem;
     max-width: 24rem;
     width: 100%;
     padding: 2.5rem;
+    overflow: hidden;
     background: var(--Grey-800);
     border-radius: 1rem;
 }
@@ -123,5 +126,5 @@ body {
     border-radius: 50%;
     width: 5rem;
     height: 5rem;
-    margin-bottom: 1.25rem;
+    margin-bottom: 1.5rem;
 }
